--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,110 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="https://fb.me/react-with-addons-0.14.6.js"></script>
+    <script src="https://fb.me/react-dom-0.14.6.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    span, a {
+      display: block;
+      float: left;
+      transform: scale(1, 1.5);
+      font-family: Avenir;
+      font-style: italic;
+      font-weight: bold;
+      font-size: 26pt;
+      padding: 0 0;
+    }
+    textarea {
+      width: 360px;
+      height: 360px;
+      margin: 20px 0;
+      padding: 8px;
+      font-family: Helvetica;
+      font-size: 12pt;
+    }
+    p {
+      font-family: Courier New;
+      font-weight: 300;
+      font-size: 12pt;
+    }
+    button {
+      background-image: url('https://www.dropbox.com/s/mowwiz0k3s7dkco/arrow.png?raw=1');
+      background-size: 100%;
+      background-color: transparent;
+      border: none;
+      width: 23px;
+      height: 23px;
+      margin-left: 10px;
+      display: inline;
+      clear: both;
+      cursor: pointer;
+      transition: 0.6s;
+    }
+    a:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+    button:hover {
+      transform: scale(1.1)
+    }
+    input[type=submit] {
+      display: block;
+      width: 70px;
+      font-family: Avenir;
+      font-style: italic;
+      font-size: 12pt;
+      font-weight: bold;
+      transform: scale(0.9, 1.1);
+      height: 30px;
+      border-radius: 4px;
+      box-shadow: 0 1px 2px 0 #e7e7e7;
+      margin: 10px 0;
+    }
+    input[type=submit]:hover {
+      background-color: black;
+      color: white;
+      cursor: pointer;
+    }
+    </style>
+  </head>
+  <body>
+    <span>Fieldmon</span>
+    <form onsubmit="handleSubmit(event)">
+      <textarea id="json-input" onkeypress="handleKeyPress(event)"></textarea>
+      <input type="submit">
+    </form>
+    <div id="app"></div>
 
-
+  <script type="text/babel" src="app.js"></script>
+  <script>
+    function handleSubmit(event) {
+      event.preventDefault()
+      var json = $('#json-input').val()
+      $.ajax({
+        method: 'POST',
+        url: 'http://127.0.0.1:8080/json',
+        data: json,
+        contentType: 'application/json',
+        success: (data) => {
+          var el = document.createElement('p')
+          el.innerHTML = data + ''
+          el.style.maxWidth = '320px'
+          $('#app').prepend(el)
+        }
+      })
+    }
+    function handleKeyPress(event) {
+      if (event.key === 'Enter') $('#submit').click()
+    }
+  </script>
+  </body>
+</html>
