--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,107 @@
-
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script> -->
+    <script src="https://fb.me/react-with-addons-0.14.6.js"></script>
+    <script src="https://fb.me/react-dom-0.14.6.js"></script>
+    <style>
+    input[type=submit] {
+      display: block;
+      width: 90px;
+      font-family: Avenir;
+      font-style: italic;
+      font-size: 12pt;
+      font-weight: bold;
+      transform: scale(0.9, 1.1);
+      height: 30px;
+      border-radius: 4px;
+      box-shadow: 0 1px 2px 0 #e7e7e7;
+      margin: 10px 0;
+    }
+    input[type=submit]:hover {
+      background-color: black;
+      color: white;
+      cursor: pointer;
+    }
+    p {
+      font-family: Courier New;
+      font-weight: 300;
+      font-size: 12pt;
+    }
+    #pop-up {
+      transition: 0.3s;
+      position: relative;
+      border-radius: 3px;
+      border: 1px solid #d5d5d5;
+      box-shadow: 0 2px 2px #888888;
+      margin: 0 auto;
+      width: 360px;
+      background-color: #e7e7e7;
+      padding: 12px;
+    }
+    h5 {
+      border-top: 1px solid #d5d5d5;
+      display: block;
+      text-align: center;
+      font-family: Avenir;
+      font-size: 6pt;
+      letter-spacing: 1px;
+      font-style: italic;
+      padding-top: 4px;
+      color: #414141;
+      transform: scale(1, 1.5)
+    }
+    form {
+      padding: 8px;
+    }
+    form > p {
+      margin: 8px 0;
+    }
+    input[type=text], input[type=password] {
+      box-shadow: inset 0 0 20px 10px white;
+      background-color: #e7e7e7;
+      width: 200px;
+      padding: 8px;
+      border: 1px solid #888888;
+      font-family: Helvetica;
+      font-size: 11pt;
+      font-weight: 100;
+    }
+    span, a {
+      display: block;
+      transform: scale(1, 1.5);
+      font-family: Avenir;
+      font-style: italic;
+      font-weight: bold;
+      font-size: 26pt;
+    }
+    span {
+      padding: 20px 0;
+    }
+    #close-pop-up {
+      display: block;
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      font-size: 6pt;
+      padding: 0;
+      cursor: pointer;
+    }
+    #pop-up > span {
+      text-align: center;
+    }
+    #app {
+      position: absolute;
+      width: 100%;
+      top: 0;
+      left: 0;
+    }
+    </style>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="app.js"></script>
+  </body>
+</html>
